[package]
name = "blog"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.52"
sea-orm = {version = "0.6.0", default-features = false, features = ["sqlx-mysql", "runtime-tokio-rustls", "macros"]}
inspirer-foundation = {path = "../../inspirer-foundation"}
futures-util = "0.3.21"
serde = { version = "1.0.136", features = ["derive"] }
